# Demo-Engine

./: .gitignore  CMakeLists.txt  README.md
demo_res/: demo.json  demo.language
src/: main.cpp
systemres/: resources.json
systemres/shaders/: colorFrag.glsl  colorVert.glsl  default3DFrag.glsl  default3DVert.glsl  mainFrag.glsl  mainVert.glsl  postFrag.glsl  postVert.glsl  skyboxVert.glsl  spriteFrag.glsl  spriteVert.glsl
